k8s/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      access_by_lua_block {
        ngx.var.best_http_host = "auth.focus.local:30443"
        ngx.var.pass_port = "30443"
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - auth.focus.local
    secretName: focus-local-tls
  rules:
  - host: auth.focus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
